FailoverCluster/CloudFormationTemplates/CloudFormationNetwork.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation template for Network components (failover cluster) 
Resources:

  ParameterAwsDnsIPAddress:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /_aws/dns/ipaddress
      Type: String
      Value: 10.0.0.2

  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: false
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: FailoverClusterVPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Join ["", [!Ref "AWS::Region", "a"]]
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: PublicRouteTable
      VpcId: !Ref VPC
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Join ["", [!Ref "AWS::Region", "a"]]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: PrivateRouteTable
      VpcId: !Ref VPC

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: FailoverSecurityGroup
      GroupDescription: Securitygroup for all nodes of this demo of the failover cluster
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          ToPort: 80
          FromPort: 80
          Description: HTTP
          IpProtocol: TCP
        - CidrIp: 0.0.0.0/0
          ToPort: 3389
          FromPort: 3389
          Description: RDP
          IpProtocol: TCP
        - CidrIp: 10.0.0.0/8
          ToPort: -1
          FromPort: -1
          IpProtocol: -1

Outputs:
  PublicSubnet:
    Description: "ID of Public Subnet"
    Value: !Ref PublicSubnet
  PrivateSubnet:
    Description: "ID of Private Subnet"
    Value: !Ref PrivateSubnet

  SecurityGroup:
    Description: "GroupId of the security group for instances in this demo"
    Value: !GetAtt SecurityGroup.GroupId
